# soundscene

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  gitlab-ci.yml
backend/: .dockerignore  Dockerfile  conftest.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/gql/: schema.py
backend/soundscene/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  managers.py  models.py  permissions.py  schema.py  serializers.py  services.py  signals.py  utility.py  validators.py
backend/users/migrations/: 0001_initial.py
backend/users/schema/: filters.py  mutations.py  queries.py  types.py
backend/users/tests/: factories.py  testHelper.py  test_models.py  test_permissions.py  test_schema_mutations.py  test_schema_queries.py  test_services.py  test_utils.py
frontend/: angular.json  package.json
